Stop doing word wrapping since Trilium supports just disabling it in settings lol

--- a/custom-dark-theme.css
+++ b/custom-dark-theme.css
@@ -24,6 +24,7 @@ dark-mode version:0.7.1 for trilium:>0.58.4
     - Fix for TriliumNext icon
     - Remove weird note title color
 	- Added word wrapping for new code block
+    - Stop doing word wrapping since Trilium supports just disabling it in settings lol
 */
 
 body {
@@ -743,14 +744,4 @@ div.note-icon-widget>button.bx.bx-code.note-icon {
 
 span.fancytree-active .fancytree-title {
   font-weight: normal;
-}
-
-.note-detail-printable.word-wrap pre.hljs,
-.note-detail-printable:not(.word-wrap) pre.hljs, .note-detail-printable:not(.word-wrap) pre code {
-    white-space: pre-wrap !important;
-    word-wrap: break-word !important;
-    overflow-wrap: break-word !important;
-    text-wrap: wrap !important;
-    white-space-collapse: preserve-breaks !important;
-    margin-right: 0 !important;
 }
